# simple_dxf

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  main.cpp
include/simple_dxf/: dxf.hpp  utils.hpp  vectors.hpp
src/: dxf.cpp
